BOTON DESCARCAR CV
BOTON DESCARCAR CV

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
              y sumarle valor al equipo de trabajo.</p>
           </div>
 
+          <a class="button" download="FloresAlejoCV.pdf" href="Documentos/FloresAlejo2022.pdf " target="_blank">DESCARGAR CV</a>
+
           <p class="card__subtitle">
             SOBRE MI:
           </p>
