--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
              y sumarle valor al equipo de trabajo.</p>
           </div>
 
-          <a class="button" download="FloresAlejoCV.pdf" href="Documentos/FloresAlejo2022.pdf " target="_blank">DESCARGAR CV</a>
+          <div class="buttons">
+          <a class="button" download="FloresAlejoCV.pdf" href="assets/documents/FloresAlejo2022.pdf" target="_blank">DESCARGAR CV</a>
+          </div>
 
           <p class="card__subtitle">
             SOBRE MI:
