--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
              y sumarle valor al equipo de trabajo.</p>
           </div>
 
-          <div class="buttons">
-          <a class="button" download="FloresAlejoCV.pdf" href="assets/documents/FloresAlejo2022.pdf" target="_blank">DESCARGAR CV</a>
-          </div>
+         
+          <a class="button buttoncv" download="FloresAlejo2022.pdf" href="assets/documents/FloresAlejo2022.pdf" target="_blank">DESCARGAR CV</a>
+          
 
           <p class="card__subtitle">
             SOBRE MI:
