--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             MI PRIMER PORTAFOLIO
           </h2>
           <p class="project__text">
-            Mi primera portafolio. No responsive.
+            Mi primer portafolio. No responsive.
           </p>
 
           <div class="buttons">
