--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
 
          
-          <a class="button buttoncv" download="FloresAlejo2022.pdf" href="assets/documents/FloresAlejoMohamedCV (1).pdf" target="_blank">DESCARGAR CV</a>
+          <a class="button buttoncv" download="FloresAlejo2022.pdf" href="assets/documents/FloresAlejoMohamedCV.pdf" target="_blank">DESCARGAR CV</a>
           
 
           <p class="card__subtitle">
