--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
 
          
-          <a class="button buttoncv" download="FloresAlejo2022.pdf" href="assets/documents/FloresAlejoMohamedCV.pdf" target="_blank">DESCARGAR CV</a>
+          <a class="button buttoncv" download="FloresAlejoMohamedCV.pdf" href="assets/documents/FloresAlejoMohamedCV.pdf" target="_blank">DESCARGAR CV</a>
           
 
           <p class="card__subtitle">
@@ -133,11 +133,11 @@
           </div>
 
             <h2 class="card__title2">
-              GALERIA DE FOTOS PIJAMAS_GEMINI
+              CATALOGO DIGITAL DE PIJAMA GEMINI
             </h2>
             <p class="project__text">
-              Galeria de fotos de todos los productos del
-              emprendimiento PIJAMAS_GEMINI.
+              Galeria de fotos de todos los productos mayoristas del
+              emprendimiento PIJAMAS GEMINI.
             </p>
 
             <div class="buttons">
