--- a/index.html
+++ b/index.html
@@ -175,7 +175,35 @@
           <a class="button ghost" href="https://github.com/FloresAlejo/POKEDEX" target="_blank">VER CODIGO</a>
           </div>
         </div>
+          </div>  
+      </article>
+
+      <article class="card card--project">
+        <div class="card__image--container">
+          <img src="assets/images/Cap6.PNG" alt="CAP1" class="project__image">
+ 
+        </div>
+
+        <div class="project">
           
+          <div class="project__tags tags3">
+            <span class="project__tag">#HTML</span>
+            <span class="project__tag">#CSS</span>
+            <span class="project__tag">#JAVASCRIPT</span>
+        </div>
+
+          <h2 class="card__title2">
+            JUEGO DE LA VIBORITA
+          </h2>
+          <p class="project__text">
+          Clasico juego hecho en JAVASCRIPT.
+          </p>
+
+          <div class="buttons">
+          <a class="button" href="https://floresalejo.github.io/JUEGO_VIBORITA/" target="_blank">VER PROJECTO</a>
+          <a class="button ghost" href="https://github.com/FloresAlejo/JUEGO_VIBORITA" target="_blank">VER CODIGO</a>
+          </div>
+
     </article>
         
         <article class="card card--project">
