--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </p>
 
             <div class="buttons">
-            <a class="button" href="https://floresalejo.github.io/PIJAMA_GEMINI/index.html" target="_blank">VER PROJECTO</a>
+            <a class="button" href="https://floresalejo.github.io/PIJAMA_GEMINI/index.html" target="_blank">VER PROYECTO</a>
             <a class="button ghost" href="https://github.com/FloresAlejo/PIJAMA_GEMINI" target="_blank">VER CODIGO</a>
             </div>
           </div>
@@ -171,7 +171,7 @@
           </p>
 
           <div class="buttons">
-          <a class="button" href="https://floresalejo.github.io/POKEDEX/" target="_blank">VER PROJECTO</a>
+          <a class="button" href="https://floresalejo.github.io/POKEDEX/" target="_blank">VER PROYECTO</a>
           <a class="button ghost" href="https://github.com/FloresAlejo/POKEDEX" target="_blank">VER CODIGO</a>
           </div>
         </div>
@@ -200,7 +200,7 @@
           </p>
 
           <div class="buttons">
-          <a class="button" href="https://floresalejo.github.io/JUEGO_VIBORITA/" target="_blank">VER PROJECTO</a>
+          <a class="button" href="https://floresalejo.github.io/JUEGO_VIBORITA/" target="_blank">VER PROYECTO</a>
           <a class="button ghost" href="https://github.com/FloresAlejo/JUEGO_VIBORITA" target="_blank">VER CODIGO</a>
           </div>
 
@@ -257,7 +257,7 @@
           </p>
 
           <div class="buttons">
-          <a class="button" href="https://floresalejo.github.io/CALCULADORA/" target="_blank">VER PROJECTO</a>
+          <a class="button" href="https://floresalejo.github.io/CALCULADORA/" target="_blank">VER PROYECTO</a>
           <a class="button ghost" href="https://github.com/FloresAlejo/CALCULADORA" target="_blank">VER CODIGO</a>
           </div>
         </div>
